--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,7 +46,11 @@ dependencies:
   flutter_sms: ^2.3.2
   circular_motion: ^0.0.3
   flutter_emoji: ^2.4.0
-  video_player:
+  cloud_firestore: ^4.3.1
+  video_player: ^2.5.1
+  fast_contacts: ^1.0.0
+  native_video_view: ^1.0.5
+  azlistview: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -79,6 +83,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
