--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   fast_contacts: ^1.0.0
   native_video_view: ^1.0.5
   azlistview: ^2.0.0
+  flutter_phone_direct_caller: ^2.1.1
+  timeago: ^3.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
